# msu_programming_task

./: README.md
.github/workflows/: ci.yml
MaxValueFinder/: CMakeLists.txt
MaxValueFinder/inc/: MaxFinderValue.h  MaxValueFinder.h
MaxValueFinder/src/: MaxFinderValue.c  MaxValueFinder.c  main.c
MaxValueFinder/test/: test_float_edge_cases.txt
MaxValueFinder/test/global/: test1.txt  test2.txt  test_invalid.txt  tets2a.txt
MaxValueFinder/test/task_float_edge_cases/: test_float_edge_cases.txt
MaxValueFinder/test/task_invalid_cases/: test_exponent_no_digit.txt  test_invalid_character_e.txt  test_multiple_dots.txt
MaxValueFinder/test/task_invalid_syntax/: test_invalid.txt
PressureCheck/: CMakeLists.txt
PressureCheck/src/: PressureCheck.c  main.c
result/: CMakeLists.txt
result/inc/: MaxFinderValue.h  PressureCheck.h
result/src/: MaxFinderValue.c  PressureCheck.c  main.c
result/test/: test_float_edge_cases.txt
result/test/global/: test1.txt  test2a.txt  test_critical.txt  test_invalid.txt  test_normal.txt
task1/: CMakeLists.txt  Doxyfile  README.md  fMax.c
task1/docs/html/: dir_693c770a17a0f51d3d522963da1de4c6.html  doxygen_crawl.html
task1/html/: dir_13e138d54eb8818da29c3992edef070a.html  dir_21fa68d677003c78acfac252c9325000.html  dir_3d0eb3e2a045a09a0450179fee493cab.html  dir_bfccd401955b95cf8c75461437045ac0.html  dir_c79cc96b27eac6031f6543260b6c630d.html  f_max_8h_source.html  files.html
task1/inc/: fMax.h
task1/src/: fMax.c
task1/test/global/: numbers.txt
task1/test/task_empty_file/: main.c
task1/test/task_invalid_syntax/: numbers.txt
